<resources>
    <string name="app_name">ITI Resturant</string>
    <!--	 Sign in Activity-->
    <string name="signin">Sign In</string>
    <string name="createanaccount">Create an Account</string>
    <string name="cancel">Cancel</string>
    <string name="welcomeback">Welcome Back</string>
    <string name="email">E-mail address</string>
    <string name="password">Password</string>
    <string name="forgetpassword">Forget Password ?</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <!--	 Sign up Activity-->
    <string name="e_mail">Email</string>
    <string name="welcome_to_togo_list"> Welcome to ToGo List</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="sign_up_with_google">Sign Up With Google</string>
    <string name="privacy_policy"><![CDATA[By clicking the sign up button , you agree to our ]]></string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_policybutton">Privacy Policy</string>
    <string name="and">and</string>
    <!-- Home Activity -->
    <string name="menu_profile">Profile</string>
    <string name="menu_myorder">My Order</string>
    <string name="menu_Setting">Setting</string>
    <string name="menu_signout">Sign out</string>
<!--     Display Item Activity-->
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="number">Number</string>
    <string name="total">Total</string>
    <string name="orderNow">Order Now</string>
<!--    Chat Activity-->
    <string name="sendChat">Send</string>
    <string name="edittextchat">Enter Your Message</string>
<!--    Cart Activity-->
    <string name="totalcart">Total :</string>
    <string name="tax">14% :</string>
    <string name="totalprice">Total Price :</string>
    <string name="payynow">Pay Now</string>
    <string name="owner_message">Thank you for contacting our restaurant \\n One of our Team will contact you shortly</string>
    <string name="item">Name Item</string>
    <string name="language">Language</string>
    <string name="choose_language">Choose Languageِ</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="ok"> OK </string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="update">Update</string>

    <string name="emailRequired">Email Required!</string>
    <string name="passwordRequired">Password Required!</string>
    <string name="confPasswordRequired">Confirm Password Required!</string>
    <string name="incompatiblePassword">Two passwords are incompatible!</string>
    <string name="networkError">Open your Data or connect ro wifi!</string>
    <string name="lengthPassword">Password length must be at least 6 characters!</string>
    <string name="signupSuccess">Signup Successfully!</string>
    <string name="errorSignUp">Failed when sign up!\nTry again!</string>
    <string name="signinSuccess">Login Successfully!</string>
    <string name="errorSignIn">Failed when login!\nEmail, pasword, or both are incorrect!</string>
    <string name="valied_number">Please Provide Valied Number</string>
    <string name="order_incomplete">Please Finish Processing Your Order First</string>
</resources>
